--- a/tickets/templates/registration/login.html
+++ b/tickets/templates/registration/login.html
@@ -45,9 +45,15 @@
               required
             />
           </div>
+
           <button type="submit" class="btn btn-primary w-100">Entrar</button>
         </form>
-      </div>
+        <div> Você ainda não está registrado? Clique aqui  
+              <a href="{% url 'register'  %}"
+                            class="btn btn-success btn-sm complete-ticket-btn" >
+                            <i class="bi bi-check-circle"></i> Registre-se
+                        </a> 
+       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
